src/z80asm/z80asm2/t/20-preproc/expected/local_11.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/20-preproc//input/local_11.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/20-preproc/input/local_11.asm...
t/20-preproc/input/local_11.asm:1:2: error: Unexpected LOCAL directive
    #local ; outside macro
     ^
t/20-preproc/input/local_11.asm:2:2: error: Unexpected LOCAL directive
    #local X; outside macro
     ^
t/20-preproc/input/local_11.asm:7:9: error: Unexpected token after LOCAL: 12
    	#local 12 ; no variable
    	       ^
t/20-preproc/input/local_11.asm:8:2: error: Unexpected ENDM directive
    #endm
     ^
t/20-preproc/input/local_11.asm:10:15: error: Identifier expected
    	#local label, ; missing variable
    	             ^
t/20-preproc/input/local_11.asm:11:2: error: Unexpected ENDM directive
    #endm
     ^
t/20-preproc/input/local_11.asm:13:15: error: Unexpected token after LOCAL: extra
    	#local l1,l2 extra ; extra input
    	             ^
t/20-preproc/input/local_11.asm:14:2: error: Unexpected ENDM directive
    #endm
     ^
t/20-preproc/input/local_11.asm:16:12: error: Parameter redefined: l1
    	#local l1,l1 ; duplicate parameter
    	          ^
t/20-preproc/input/local_11.asm:17:2: error: Unexpected ENDM directive
    #endm
     ^
# file: t/20-preproc/input/local_11.asm
EndOfLine	"\n"	18:1	
# file: t/20-preproc/input/local_11.asm
Identifier	"MACRO"	3:8	keyword=MACRO 
Identifier	"M1"	3:8	
EndOfLine	"\n"	3:8	
Identifier	"ENDM"	3:8	keyword=ENDM 
symbol	__CPU_Z80__	1	(defined at )
symbol	__CPU_ZILOG__	1	(defined at )
